[tool.poetry]
name = "hermes"
version = "0.1.1"
description = "Messaging for Multi-messenger Astronomy"
authors = [
    "Curtis McCully <cmccully@lco.glboal>",
    "Joseph Chatelain <jchatelain@lco.global>"
    "Lindy Lindstrom <llindstrom@lco.global>",
    ]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.1"
whitenoise = "^6.0.0"
lcogt-logging = "^0.3.2"
hop-client = "^0.5.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
